nav bar color and alignment fixes

--- a/styles/style_sba.css
+++ b/styles/style_sba.css
@@ -27,3 +27,7 @@ body {
 
 }
 
+.navbar-dark {
+    text-decoration: darkcyan;
+}
+
